--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://gumca2044.github.io/mdpassgn4/"
 languageCode = "en-us"
 title = "MDP Assignment 4"
 theme = "Niello"
